# Jarvis-PLOT

./: .gitignore  README.md  jarvisplot  jprel  pyproject.toml
.github/workflows/: python-package.yml
docs/: README.md
docs/archive/: JARVIS_PLOT_CODE_REVIEW_2026-03-04.md  README.md
docs/context/: CODEX_JARVIS_PLOT_STYLE.md  CODE_MAP_JARVIS_PLOT.md  JARVIS_PLOT_CODE_REVIEW_2026-03-04.md  JARVIS_PLOT_CONTEXT.md  JARVIS_PLOT_FRAMEWORK_LOGIC.md  README.md
docs/design/: ARCHITECTURE_OVERVIEW.md  DATAFLOW_ARCHITECTURE.md  LAYOUT_ENGINE_DESIGN.md  PROFILE_SYSTEM_DESIGN.md  README.md  STYLE_SYSTEM_DESIGN.md
docs/dev/: CONTRIBUTION_GUIDE.md  DEVELOPER_RULES.md  MEMORY_OPTIMIZATION_GUIDE.md  MEMTRACE_SYSTEM.md  README.md
docs/release/: README.md  RELEASE_PLAYBOOK.md
docs/roadmap/: IMPLEMENTATION_ROADMAP.md  README.md
docs/specs/: DYNESTY_RUNPLOT.md  LAYER_TYPE_REGISTRY.md  PROFILE_SCHEMA.md  README.md  SCENE_JSON_SCHEMA.md  STYLE_SCHEMA.md
docs/templates/: README.md  profile.example.json  scene.example.json  style.example.json
jarvisplot/: cache_store.py  cli.py  config.py  core.py  core_assets.py  core_runtime.py  data_loader.py  data_loader_hdf5.py  data_loader_runtime.py  data_loader_summary.py  inner_func.py  memtrace.py
jarvisplot/Figure/: adapters.py  figure.py  (+17 more)
src/: core.py
tests/: conftest.py  test_data_loader_contracts.py  test_docs_status_labels.py  test_figure_contracts.py  test_interp_natural_neighbor.py  test_interpolator_contracts.py  test_jpcontour_methods.py  test_parse_data_metadata.py  test_pathing_contracts.py  test_template_json.py
(+26 files in other folders)
